# src/api/user.go
@@ -70,12 +70,12 @@ func (a *User) ListLabels(ctx *gear.Context) error {
 
 // ListSettings 返回 user 的 settings，按照 setting 设置时间正序，支持分页
 func (a *User) ListSettings(ctx *gear.Context) error {
-	req := tpl.UIDProductURL{}
+	req := tpl.UIDPaginationURL{}
 	if err := ctx.ParseURL(&req); err != nil {
 		return err
 	}
 
-	res, err := a.blls.User.ListSettings(ctx, req.UID, req.Product, req.Pagination)
+	res, err := a.blls.User.ListSettings(ctx, req.UID, req.Pagination)
 	if err != nil {
 		return err
 	}
